WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221729
REGRESSION (
r269824
) IOSurface allocation failure causes crash in RemoteLayerBackingStore::display()
https://bugs.webkit.org/show_bug.cgi?id=221729
Summary
REGRESSION (r269824) IOSurface allocation failure causes crash in RemoteLayer...
Simon Fraser (smfr)
Reported
2021-02-10 16:52:45 PST
REGRESSION (
r269824
) IOSurface allocation failure causes crash in RemoteLayerBackingStore::display()
Attachments
Patch
(1.65 KB, patch)
2021-02-10 16:53 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2021-02-10 16:53:56 PST
Created
attachment 419923
[details]
Patch
EWS
Comment 2
2021-02-10 17:26:19 PST
Committed
r272698
: <
https://commits.webkit.org/r272698
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 419923
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-02-10 17:27:18 PST
<
rdar://problem/74214538
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug