Cherry-pick r272698. rdar://problem/74410282

REGRESSION (r269824) IOSurface allocation failure causes crash in RemoteLayerBackingStore::display()
    https://bugs.webkit.org/show_bug.cgi?id=221729
    rdar://72651289

    Reviewed by Tim Horton.

    The refactoring in r269824 dropped a null check on the front buffer surface (IOSurface allocation
    can fail when the process reaches a hardcoded limit). Restore the null check.

    * Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:
    (WebKit::RemoteLayerBackingStore::display):

    Canonical link: https://commits.webkit.org/233943@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272698 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/232923.202@safari-611-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-611-branch@272962 268f45cc-cd09-0410-ab3c-d52691b4dbfc